--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       padding: 0;
       display: flex;
       justify-content: center;
-      align-items: flex-start; /* لتقريب الفورم من الأعلى */
+      align-items: flex-start; 
       height: 100vh;
-      direction: rtl; /* جعل النصوص من اليمين لليسار */
-      padding-top: 20px; /* إضافة مسافة من الأعلى */
+      direction: rtl; 
+      padding-top: 20px; 
     }
 
     h2 {
@@ -33,7 +33,7 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       width: 100%;
       max-width: 400px;
-      margin-top: 10px; /* تقليل المسافة من الأعلى */
+      margin-top: 10px; 
     }
 
     input[type="text"],
@@ -65,7 +65,7 @@
       margin-top: 20px;
       font-size: 18px;
       color: #333;
-      text-align: right; /* محاذاة النص إلى اليمين */
+      text-align: right; 
     }
 
     table {
@@ -124,34 +124,28 @@
     const form = document.getElementById('resultForm');
     const resultBox = document.getElementById('resultBox');
 
-    const apiKey = 'AIzaSyC7VXkWbJZDmO1bBUxnBFso8PKvMDRyKMo'; // استبدل بـ API Key الخاص بك
-    const spreadsheetId = '1L0JLewvYeEmQ0Otlec4QO_YRaIGtGABVUu9sBN5Xw8k'; // استبدل بـ ID الخاص بالـ Google Sheets
+    const apiKey = 'AIzaSyC7VXkWbJZDmO1bBUxnBFso8PKvMDRyKMo'; 
+    const spreadsheetId = '1L0JLewvYeEmQ0Otlec4QO_YRaIGtGABVUu9sBN5Xw8k'; 
 
     const departmentSelect = document.getElementById('department');
     const yearSelect = document.getElementById('year');
 
-    // Store all year options (so we can reset them later)
     const allYearOptions = Array.from(yearSelect.options);
 
-    // Disable year dropdown initially
     yearSelect.disabled = true;
 
     departmentSelect.addEventListener('change', function () {
       const selectedDepartment = departmentSelect.value;
 
-      // Enable the year dropdown
       yearSelect.disabled = false;
 
-      // Clear current options
       yearSelect.innerHTML = '';
 
       if (selectedDepartment === 'IT') {
-        // Show only the first 3 years
         for (let i = 0; i < 4; i++) {
           yearSelect.appendChild(allYearOptions[i].cloneNode(true));
         }
       } else {
-        // Show all 4 years
         allYearOptions.forEach(option => {
           yearSelect.appendChild(option.cloneNode(true));
         });
@@ -170,10 +164,9 @@
     function loadAllStudentData(department, year) {
       const cacheKey = `${department}-${year}-all`;
 
-      // تحقق من وجود البيانات المخزنة
       const cachedData = localStorage.getItem(cacheKey);
       if (cachedData) {
-        return JSON.parse(cachedData); // إذا كانت البيانات موجودة في الكاش، نعيدها
+        return JSON.parse(cachedData); 
       }
 
       return null;
@@ -181,13 +174,12 @@
 
     function storeAllStudentData(department, year, data) {
       const cacheKey = `${department}-${year}-all`;
-      localStorage.setItem(cacheKey, JSON.stringify(data)); // تخزين البيانات في localStorage
+      localStorage.setItem(cacheKey, JSON.stringify(data)); 
     }
 
     function getStudentResult(code, department, year) {
       const allData = loadAllStudentData(department, year);
       if (allData) {
-        // البحث عن الطالب في البيانات المخزنة
         const student = allData.find(row => row[0] === code);
         if (student) {
           showStudentResult(student, allData[0]);
@@ -198,20 +190,17 @@
         resultBox.innerHTML = "جاري تحميل البيانات...";
         const sheetName = `${department}-${year}`;
 
-        // تحميل البيانات من Google Sheets
         gapi.client.request({
           path: `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${sheetName}!A1:Z1000`,
         }).then(function(response) {
           const rows = response.result.values;
-          const resultData = rows.map(row => row); // تخزين جميع البيانات
+          const resultData = rows.map(row => row); 
           
-          // تخزين البيانات في localStorage
           storeAllStudentData(department, year, resultData);
 
-          // البحث عن الطالب في البيانات الجديدة
           const student = resultData.find(row => row[0] === code);
           if (student) {
-            showStudentResult(student, rows[0]); // نمرر صف العناوين لتظهر أسماء المواد بشكل صحيح
+            showStudentResult(student, rows[0]); 
           } else {
             resultBox.innerHTML = '❌ الكود غير موجود.';
           }
@@ -227,9 +216,8 @@
       result += '<table>';
       result += `<tr><th>المادة</th><th>الدرجة</th></tr>`;
       
-      // التأكد من أن الصف الأول يحتوي على أسماء مواد صالحة (غير فارغة)
       for (let j = 2; j < studentData.length; j++) {
-        if (headers[j] && headers[j].trim() !== '') {  // التأكد من أن اسم المادة غير فارغ
+        if (headers[j] && headers[j].trim() !== '') {  
           result += `<tr><td>${headers[j]}</td><td>${studentData[j]}</td></tr>`;
         } else {
           result += `<tr><td>المادة غير محددة</td><td>${studentData[j]}</td></tr>`;
@@ -239,13 +227,6 @@
       resultBox.innerHTML = result;
     }
 
-    // form.addEventListener('submit', function(e) {
-    //   e.preventDefault();
-    //   const code = document.getElementById('code').value.trim();
-    //   const department = document.getElementById('department').value;
-    //   const year = document.getElementById('year').value;
-    //   getStudentResult(code, department, year);
-    // });
 
     form.addEventListener('submit', function(e) {
       e.preventDefault();
@@ -254,7 +235,6 @@
       const department = departmentSelect.value;
       const year = yearSelect.value;
 
-      // التحقق من أن جميع الحقول ممتلئة
       if (!code || department === "اختر القسم" || year === "اختر السنة الدراسية") {
         resultBox.innerHTML = '❌ برجاء ملء جميع الحقول قبل عرض النتيجة.';
         return;
